--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">XposedHook</string>
+    <string name="app_name">定位，启动！！</string>
 
     <string name="search_app">搜索应用</string>
 
